--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,13 @@
   "functions": {
     "api/**/*.py": {
       "memory": 1024,
-      "maxDuration": 10
+      "maxDuration": 10,
+      "excludeFiles": [
+        ".git/**",
+        ".gitignore",
+        ".env",
+        "README.md"
+      ]
     }
   },
   "routes": [
